# om-repo-picker

./: CMakeLists.txt
cli/: CMakeLists.txt  enable-repo
lang/: it.ts
src/: Tools.cpp
